--- a/FactsNorris/Base.lproj/LaunchScreen.storyboard
+++ b/FactsNorris/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,16 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="JRs-Ko-s8s">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
@@ -16,12 +21,63 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="L7D-qT-XwW">
+                                <rect key="frame" x="16" y="20" width="320" height="598"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="y0F-Ii-pAC">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="598"/>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="480" id="3MW-bG-pwl"/>
+                                    <constraint firstAttribute="width" constant="320" id="Saj-P8-fBG"/>
+                                    <constraint firstAttribute="height" constant="480" id="yad-zU-9wN"/>
+                                </constraints>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Default.png" translatesAutoresizingMaskIntoConstraints="NO" id="hhq-oK-R9m">
+                                <rect key="frame" x="27" y="20" width="320" height="598"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="L7D-qT-XwW" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="8x6-A5-E9U"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="L7D-qT-XwW" secondAttribute="trailing" id="9oE-fh-gVA"/>
+                            <constraint firstItem="L7D-qT-XwW" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="Ecn-i6-zq6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="L7D-qT-XwW" secondAttribute="trailing" id="HpU-8m-oP7"/>
+                            <constraint firstItem="L7D-qT-XwW" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="IYa-eI-8pE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="L7D-qT-XwW" secondAttribute="trailing" id="Jnz-0a-oaY"/>
+                            <constraint firstItem="L7D-qT-XwW" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="to8-0A-olS"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="L7D-qT-XwW" secondAttribute="bottom" id="wmt-Bx-vm1"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="NSv-xR-zh8"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="991.20000000000005" y="374.66266866566718"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="nRD-J6-qOy">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="JRs-Ko-s8s" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="FG8-xH-moa">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="01J-lp-oVM" kind="relationship" relationship="viewControllers" id="Lha-uy-LQI"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZVR-87-LAY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Default.png" width="320" height="480"/>
+    </resources>
 </document>
